fix collapsing navbar on mobile screen

--- a/ApiFactory/static/css/index.css
+++ b/ApiFactory/static/css/index.css
@@ -46,6 +46,7 @@ body {
     0% {
         color: rgba(0, 0, 0, 0);
     }
+
     100% {
         color: var(--main-dark-color);
     }
@@ -195,11 +196,11 @@ li {
 }
 
 
-.section > * {
+.section>* {
     margin: 0 0;
 }
 
-.section > .title {
+.section>.title {
     transition: all .3s ease-in-out;
     margin-bottom: 20px;
     font-size: 72px;
@@ -207,25 +208,25 @@ li {
     border-bottom: solid #e5e5e5 2px;
 }
 
-.section > .icon {
+.section>.icon {
     margin-bottom: 20px;
     user-select: none;
 }
 
-.section > .icon > img {
+.section>.icon>img {
     margin-top: 30px;
     height: auto;
     width: 150px;
 }
 
-.section > .text {
+.section>.text {
     font-size: 28px;
     word-break: break-word;
     white-space: normal;
     overflow: hidden;
 }
 
-.section > .subtitle {
+.section>.subtitle {
     font-size: 28px;
     white-space: normal;
     width: 300px;
@@ -322,14 +323,14 @@ li {
     width: 70vw;
 }
 
-#customers > a {
+#customers>a {
     height: 200px;
     width: calc(100% / 3);
     padding: 10px;
     text-align: center;
 }
 
-#customers > a > img {
+#customers>a>img {
     max-height: 100%;
     max-width: 100%;
     filter: grayscale(100%);
@@ -341,7 +342,7 @@ li {
     user-select: none;
 }
 
-#customers > a > img:hover {
+#customers>a>img:hover {
     filter: grayscale(0);
     opacity: 1;
 }
@@ -376,14 +377,14 @@ li {
     margin: 10px;
 }
 
-.section2 > .title {
+.section2>.title {
     font-size: 22px;
     color: var(--main-dark-color);
     white-space: normal !important;
     height: 100px;
 }
 
-.section2 > .content {
+.section2>.content {
     font-size: 24px;
     font-weight: 600;
     text-decoration: none;
@@ -391,12 +392,12 @@ li {
     transition: all .3s ease;
 }
 
-.section2 > .content > a {
+.section2>.content>a {
     text-decoration: none;
     color: inherit;
 }
 
-.section2 > .content > * {
+.section2>.content>* {
     margin: 20px 0;
 }
 
@@ -511,27 +512,11 @@ input:focus {
     height: auto !important;
 }
 
-.offcanvas.show .nav-link,
-.offcanvas.showing .nav-link {
-    height: 3rem !important;
-}
-
 .offcanvas.show,
 .offcanvas.showing {
-    z-index: 1!important;
     top: 100px;
-    height: calc(100svh - 100px);
+    min-height: calc(100svh - 100px);
 }
-
-.offcanvas,
-.offcanvas * {
-    z-index: 1!important;
-}
-
-.navbar{
-    z-index: 99!important;
-}
-
 
 @media (max-width: 1400px) {
     .fs-xxl {
@@ -590,7 +575,7 @@ input:focus {
         width: 100%;
     }
 
-    #customers > a {
+    #customers>a {
         width: calc(100% / 2)
     }
 
@@ -598,11 +583,11 @@ input:focus {
         margin: 0;
     }
 
-    .section2 > .title {
+    .section2>.title {
         height: auto;
     }
 
-    .section2 > .content {
+    .section2>.content {
         font-size: 18px;
         width: 100%;
     }
@@ -621,7 +606,7 @@ input:focus {
         font-size: 28px;
     }
 
-    .section > .text {
+    .section>.text {
         overflow-wrap: break-word;
         word-wrap: break-word;
         word-break: keep-all;
@@ -633,7 +618,8 @@ input:focus {
 
     .fs-title {
         font-size: 38px;
-        white-space: normal !important;;
+        white-space: normal !important;
+        ;
     }
 
     .fs-3 {
